# muwanx

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.mjs
.github/: FUNDING.yml
_old/: README.md  package-lock.json  vite.config.mjs
_old/python/: MANIFEST.in  README.md  pyproject.toml
_old/python/src/muwanx/: __init__.py
assets/: config.json  index-B4KKZEHS.css  index-BAxrb293.js  index-BUn9dLw-.js  index-BZnXJrl9.js  index-BfafJ7e6.css  index-CZcG4daY.css  index-CepqOHvl.js  index-DDe2L0sy.js  index-D_T10M2B.js  index-DsFPEDdT.js  index-FWT-vnUE.js  index-lwarugyC.js
docs/: MUJOCO_WASM_337_MIGRATION.md  README.md  mkdocs.yml  requirements.txt  usage.md
examples/: main.ts
main/: index.html
menagerie/: index.html
myosuite/: index.html
notebooks/: demo.ipynb
public/: config.json  config_mujoco_menagerie.json  config_myosuite.json
python/: index.html  pyproject.toml
python/assets/: config.json  index-2rVHTc4h.js  index-2rVHTc4h.js.map  index-6ht3XlUy.css  index-BafuKsUx.js  index-ByPiUzHW.js  index-C0_eqFTo.js  index-C0_eqFTo.js.map  index-C65igI-N.css  index-CGBwtH9v.js  index-CGBwtH9v.js.map  index-CfDRukMB.js  index-CfDRukMB.js.map  index-DQs_F9S3.js  index-DQs_F9S3.js.map  index-DTb6RzNW.js  index-DTb6RzNW.js.map  index-IE_pZUYZ.js  index-IE_pZUYZ.js.map  index-KrBMG28k.css  index-dL8MKdSW.js  index-taKrgups.js  index-taKrgups.js.map
python/main/: index.html
python/main/assets/: config.json
python/main/assets/policy/g1/: balance.json  locomotion.json
python/main/assets/policy/go1/: decap.json
python/main/assets/policy/go2/: robust.json
python/menagerie/: index.html
python/menagerie/assets/: config.json
python/myosuite/: index.html
python/playground/: index.html
python/playground/assets/: config.json
python/playground/assets/scene/mujoco_playground/mujoco_playground/_src/locomotion/berkeley_humanoid/xmls/: berkeley_humanoid_mjx_feetonly.xml
python/playground/assets/scene/mujoco_playground/mujoco_playground/_src/locomotion/go1/xmls/: go1_mjx_fullcollisions.xml
python/playground/assets/scene/mujoco_playground/mujoco_playground/_src/locomotion/t1/xmls/: t1_mjx_feetonly.xml
python/playground/assets/scene/mujoco_playground/mujoco_playground/_src/manipulation/franka_emika_panda/xmls/: mjx_single_cube_camera.xml
python/playground/assets/scene/mujoco_playground/mujoco_playground/_src/manipulation/franka_emika_panda_robotiq/xmls/: panda_updated_robotiq_2f85.xml
reorg/: index.html  package-lock.json  package.json  vite.config.ts
src/: index.ts
tests/: assets_map.yaml  test-asset-collector.mjs  test_builder.py  test_demo_models.py  test_utils.py
(+277 files in other folders)
